Fix drag overlay spilling into text editor and docs and manual arrange bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,10 @@
   --border-radius-large: 16px;
 }
 
+textarea {
+    user-select: text;
+    pointer-events: auto;
+}
 
 * {
   /*margin: 0;*/
